[metadata]
name = pas-dbus
description = Python Application Services: D-Bus messages
long_description = "pas-dbus" provides marshaling and unmarshaling capabilities for D-Bus messages.
platforms = any
author = direct Netware Group et al.
author_email = web@direct-netware.de
license = MPL2
url = https://www.direct-netware.de/redirect?pas;dbus
classifiers =
    Framework :: direct PAS
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
